package common;

public enum PaymentMethod {
    CREDIT_CARD, PAYPAL, BANK_TRANSFER;
}